--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 120px auto 0 auto;
-    max-width: 500px; 
+    margin: 60px auto 0 auto;
+    max-width: 90%;
+    padding: 0 10px; 
 }
 .stats-container{
     padding: 30px;
@@ -118,4 +119,39 @@ ul.task-list li.done {
     cursor: pointer;
     margin-left: 10px;
     transition: transform 0.2s ease;
+}
+
+/* Mobile Screen */
+@media(max-width: 600px){
+    .stats-container{
+        flex-direction: column; /*stack items */
+        gap: 20px;
+        text-align: center;
+    }
+
+    #numbers {
+        width: 70px;
+        height: 70px;
+        font-size: 20px;
+    }
+
+    form {
+        flex-direction: column; /* input above button*/
+    }
+
+    input {
+        width: 100%;
+    }
+
+    button {
+        width: 100%;
+        border-radius: 10px;
+        height: auto;
+        font-size: 14px;
+        padding: 12px;
+    }
+    ul.task-list li {
+        font-size: 14px;
+        padding: 10px;
+    }
 }
